--- a/inertia/css/global.css
+++ b/inertia/css/global.css
@@ -11,13 +11,13 @@
   }
 
   body {
-    background-color: #f9fafb;
-    color: #111827;
+    background-color: var(--color-gray-50);
+    color: var(--color-gray-900);
   }
 
   .dark body {
-    background-color: #111827;
-    color: #f9fafb;
+    background-color: var(--color-gray-900);
+    color: var(--color-gray-50);
   }
 }
 
@@ -35,12 +35,12 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #d1d5db;
+    background: var(--color-gray-300);
     border-radius: 9999px;
   }
 
   ::-webkit-scrollbar-thumb:hover {
-    background: #9ca3af;
+    background: var(--color-gray-400);
   }
 }
 
